# splat-desktop

./: CLAUDE.md  CLAUDE_v1.md  README.md  SESSION_STATE.md  SESSION_STATE_v1.md  SESSION_STATE_v2.md  package-lock.json  package.json  privacy-policy.html
.github/workflows/: build.yml
launch/: ASSET_INVENTORY_v1.md  ASSET_INVENTORY_v2.md  PIXELCLUSTER_WEBSITE_EXPLAINER_ASSEMBLY_SPEC_v1.md  POINTFIELD_WEBSITE_EXPLAINER_ASSEMBLY_SPEC_v1.1.md  RELEASE_PACKET_v1.1.md  RELEASE_PACKET_v1.2.md  RELEASE_PACKET_v1.md  RELEASE_PLAN_v1.md  RELEASE_PLAN_v2.md  SESSION_STATE.md  diagram-1_frame-grid-clusters_spec_v1.1.md  diagram-1_frame-grid-clusters_spec_v1.md  diagram-2_one-region-seven-points_spec_v1.1.md  diagram-2_one-region-seven-points_spec_v1.md  diagram-3_build.py  diagram-3_build_v2.py  diagram-3_interaction-modes_spec_v1.1.md  diagram-3_interaction-modes_spec_v1.md  mac-app-store_v1.md  mac-app-store_v2.md  social-copy_v1.md  social-copy_v2.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: app.js  index.html  style.css
