[package]
name = "splat"
version = "1.0.0"
description = "Real-time video-to-particle renderer"
authors = ["Ciamac Parhizi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
