[package]
name = "ciafx"
version = "2.0.1"
description = "Real-time video-to-particle renderer by Ciamac"
authors = ["Ciamac Parhizi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
